Added initial HTML framework as well as some CSS styling rules

--- a/README.me
+++ b/README.me
@@ -1,1 +1,3 @@
-Todo List is a practice web app site developed using vanilla JS in addtion to Bootstrap. This is part of my continued study of Frontend Web Development.
+Todo List is a practice web app site developed using vanilla JS in addition to Bootstrap. This is part of my continued study of Frontend Web Development.
+
+This projects uses vector icons via Line Awesome.
