Added link to project site in README.me

--- a/README.me
+++ b/README.me
@@ -1,3 +1,5 @@
 Todo List is a practice web app site developed using vanilla JS in addition to Bootstrap. This is part of my continued study of Frontend Web Development.
 
 This projects uses vector icons via Line Awesome.
+
+Checkout the site here: https://vilasi.github.io/Todo-List/
